Fix client hangs when hovering over a <map-a> that is too long issue. (#972)
Closes #971

--- a/src/mapml.css
+++ b/src/mapml.css
@@ -683,12 +683,16 @@ svg.leaflet-image-layer.leaflet-interactive g {
   bottom: 0;
   background-color: rgb(222,225,230);
   border-radius: 0 5px 0 0 ;
-  z-index: 1050;
+  z-index: 1050;  
+  max-width: 60%;
 }
 
 .mapml-link-preview > p {
   margin: 3px 5px 2px 3px;
   color: rgb(60,64,67);
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  white-space: nowrap;
 }
 
 /**
